--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "spinners-react": "^1.0.7",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "timeago-react": "^3.0.5"
   },
   "devDependencies": {
     "@types/node": "18.11.0",
